Fixed wrong reassignment of Save and Save as actions

Instead of removing the old Save and Save As actions using
action()->text(), the actions are now properly reconnected to custom
slots

BUG: 285658
FIXED-IN: 0.4.2